--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hyperflow/job-executor",
+  "name": "@krzysztofxkwiecien/job-executor",
   "version": "1.3.4",
   "main": "index.js",
   "license": "MIT",
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "@stroncium/procfs": "^1.0.0",
+    "express": "^4.17.1",
     "docopt": "^0.6.2",
     "log4js": "^6.1.0",
     "pidtree": "^0.3.0",
